@@ -3,13 +3,17 @@
 	* bin/cygbuild.sh: (CygbuildCmdInstallDirClean): New.
 	(CygbuildCmdInstallFinishMessage): New.
 	(CygbuildInstallFixDocdirInstall): New.
-	(CygbuildInstallFixMain): Use `CygbuildInstallFixDocdirInstall'.
+	(CygbuildInstallFixEtcdirInstall): New.
+	(CygbuildDefineGlobalMain): Define $DIR_ETC_GENERAL
+	(CygbuildInstallFixMain): Use `CygbuildInstallFixDocdirInstall'
+	and `CygbuildInstallFixEtcdirInstall'.
 
 	* etc/template/package.README (Build instructions): Change
 	<PKG>-<VER>-<REL>-src to more generic <PKG>-*-src
 
 	* bin/cygbuild.pl (Package): Delete trailing slash from 'package-'
 	name.
+	(ReadmeFix): Don't call ReadMeFilesIncluded().
 
 2008-02-14  Jari Aalto  <jari.aalto@cante.net>
 
